# cicd-demo

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-demo.yaml
src/: account.py  money.py  printer.py  transaction.py
tests/: test_account.py  test_money.py  test_transaction.py
